# Training-GAT-GRPO

./: AGENTS.md  README.md  opencode.json  pyproject.toml
notebooks/: dataset_analysis.ipynb  testing_attention.ipynb
src/training/: __init__.py  agent_prompts.py  format_verifier.py  planner_schema.py  reasoning_schema.py
