[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub[cli]>=0.32.4",
    "ipykernel>=6.29.5",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
